feat: cascade book↔hold, search paginata e hard-delete - completa integrazione test
• Dominio / DB
  ▸ V31 FK holds→books  +  V32 ON DELETE CASCADE
  ▸ V27 / V30 seed holds, V29 libri demo, refresh script V20
• Service layer
  ▸ BookService.softDeleteBook() con cascade CANCELLED su hold
  ▸ HoldService.searchPaged(... sort, filtri, pageable)
• Repository
  ▸ HoldRepository + HoldSpecs (Specification API) per ricerca avanzata
  ▸ BookRepository.hardDeleteByIdNative()
• Controller
  ▸ BookController – soft-/hard-delete semplificato, OpenAPI rivisto
  ▸ HoldController – descrizioni Swagger complete, header X-Total-Count
• Test
  ▸ PostgresTestContainer config
  ▸ BookSoftDeleteCascadeIT  / BookHardDeleteCascadeIT
  ▸ HoldPaginationIT (dataset deterministico)
  ▸ OrderConcurrencyTest: aggiornato path
• Documentazione
  ▸ README_DB.md e RoadMap.md aggiornati (schema, migrazioni, backlog)
• Build/infra
  ▸ pom.xml: BOM Testcontainers, dipendenze allineate